K018: adjust zram config

--- a/arch/x86/configs/K018_defconfig
+++ b/arch/x86/configs/K018_defconfig
@@ -452,6 +452,10 @@ CONFIG_ARCH_SUPPORTS_MEMORY_FAILURE=y
 CONFIG_CROSS_MEMORY_ATTACH=y
 # CONFIG_CLEANCACHE is not set
 # CONFIG_FRONTSWAP is not set
+# CONFIG_ZPOOL is not set
+CONFIG_ZSMALLOC=y
+# CONFIG_PGTABLE_MAPPING is not set
+# CONFIG_ZSMALLOC_STAT is not set
 # CONFIG_HIGHPTE is not set
 CONFIG_X86_CHECK_BIOS_CORRUPTION=y
 # CONFIG_X86_BOOTPARAM_MEMORY_CORRUPTION_CHECK is not set
@@ -1041,6 +1045,9 @@ CONFIG_PROC_EVENTS=y
 CONFIG_BLK_DEV=y
 # CONFIG_BLK_DEV_FD is not set
 # CONFIG_BLK_DEV_PCIESSD_MTIP32XX is not set
+CONFIG_ZRAM=y
+CONFIG_ZRAM_LZ4_COMPRESS=y
+# CONFIG_ZRAM_DEBUG is not set
 # CONFIG_BLK_CPQ_DA is not set
 # CONFIG_BLK_CPQ_CISS_DA is not set
 # CONFIG_BLK_DEV_DAC960 is not set
@@ -3424,9 +3431,6 @@ CONFIG_INV_MPU_IIO=y
 # CONFIG_INV_IIO_MPU3050_ACCEL_SLAVE_BMA250 is not set
 CONFIG_SENSORS_MPU6500=y
 # CONFIG_IIO_SIMPLE_DUMMY is not set
-CONFIG_ZSMALLOC=y
-CONFIG_ZRAM=y
-# CONFIG_ZRAM_DEBUG is not set
 # CONFIG_FB_SM7XX is not set
 # CONFIG_CRYSTALHD is not set
 # CONFIG_FB_XGI is not set
